<resources>
    <string name="app_name">MoraCMG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_report">Encontrou um erro?</string>
    <string name="action_sair">Sair</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Editar Perfil</string>
    <string name="menu_slideshow">Vagas</string>
    <string name="menu_historico">Histórico</string>
    <string name="menu_moradias">Moradias</string>


    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dialog_title">titulo do alerta</string>
    <string name="dialog_message">alert mensagens</string>


    <string-array name="spinner_generos">
        <item>Outro</item>
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Transgenero</item>
        <item>Prefiro não dizer</item>
    </string-array>
    
    <string-array name="spinner_cursos">
        <item>Análise de Sistemas</item>
        <item>Sistemas de Informação</item>
        <item>Eng. Ambiental</item>
        <item>Eng. Telecomunicações</item>
        <item>Eng. Transportes</item>
        <item>Controle Ambiental</item>
        <item>Construção Civil</item>
        <item>Administração</item>
        <item>Administração Pública</item>
        <item>Ciências do Esporte</item>
        <item>Nutrição</item>
        <item>Eng. Manufatura</item>
        <item>Eng. Produção</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
        <item>Especialização</item>
        <item>Outro</item>
    </string-array>



    <string-array name="spinnerTipoVagas">
    <item>Ver Todas</item>
    <item>Temporária</item>
    <item>Definitiva</item>
</string-array>

    <string-array name="spinnerAno">
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>outro</item>
    </string-array>

</resources>
