<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.unicamp.ft.c155041.moracmg.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.unicamp.ft.c155041.moracmg.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.unicamp.ft.c155041.moracmg.ui.buscas.BuscasFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_buscas" />

    <fragment
        android:id="@+id/nav_historico"
        android:name="br.unicamp.ft.c155041.moracmg.ui.historico.HistoricoFragment"
        android:label="@string/menu_historico"
        tools:layout="@layout/fragment_historico" />

    <fragment
        android:id="@+id/nav_moradias"
        android:name="br.unicamp.ft.c155041.moracmg.ui.moradias.MoradiasFragment"
        android:label="@string/menu_moradias"
        tools:layout="@layout/fragment_moradias" />

    <fragment
        android:id="@+id/nav_share"
        android:name="br.unicamp.ft.c155041.moracmg.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="br.unicamp.ft.c155041.moracmg.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>